--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button>4</button>
         <button>5</button>
     </div>
-    <a href="">Enviar</a>
+    <a href="./Pages/Agradecimento.html">Enviar</a>
  </div>
 
 </body>
